Kubernetes/banking_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: banking
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: banking
  template:
    metadata:
      labels:
        app: banking
    spec:
      containers:
      - name: banking
        image: exam-project-2022-banking
        imagePullPolicy: Never
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: banking-entrypoint
spec:
  type: ClusterIP
  selector:
    app: banking
  ports:
  - port: 8000
