Kubernetes/order_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: orders
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: banking
        image: exam-project-2022_orders
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: orders-entrypoint
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
  - port: 8000
