Kubernetes/product_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: products
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: banking
        image: exam-project-2022-products
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: products-entrypoint
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
  - port: 8000
